# Augmented-caching

./: .gitignore  CANONICAL_KBS_SUBMISSION.md  README.md  pyproject.toml  refs.bib
analysis/: README.md  atlas_cga_v1_first_check.csv  atlas_cga_v1_first_check.md  atlas_cga_v2_first_check.csv  atlas_cga_v2_first_check.md  atlas_v2_first_check.csv  atlas_v2_first_check.md  atlas_v3_first_check.csv  atlas_v3_first_check.md  evict_value_failure_slice_audit.csv  evict_value_failure_slice_summary.md  evict_value_pairwise_first_check.md  evict_value_pairwise_multitrace_eval.md  evict_value_v1_first_check.csv  evict_value_v1_first_check.md  evict_value_v1_metrics.json  evict_value_v1_model_comparison.csv  evict_value_v1_wulver_dataset_summary.md  evict_value_v1_wulver_dataset_summary_heavy_r1.md  evict_value_v1_wulver_phase_verdict.md  evict_value_v1_wulver_split_audit.md  evict_value_v1_wulver_split_validation_note.md  evict_value_wulver_v1_best_config.json  evict_value_wulver_v1_model_comparison.csv  evict_value_wulver_v1_model_comparison_heavy_r1.csv  evict_value_wulver_v1_model_comparison_heavy_smoke.csv  evict_value_wulver_v1_policy_comparison.csv  evict_value_wulver_v1_policy_comparison.md  evict_value_wulver_v1_policy_comparison_heavy_smoke.csv  evict_value_wulver_v1_policy_comparison_heavy_smoke.md  evict_value_wulver_v1_train_metrics.json  evict_value_wulver_v1_train_metrics_heavy_r1.json  evict_value_wulver_v1_train_metrics_heavy_smoke.json  failure_slice_audit_heavy_r1_bounded.csv  failure_slice_audit_heavy_r1_bounded.md  ml_gate_v1_first_check.csv  ml_gate_v1_first_check.md  ml_gate_v1_metrics.json  ml_gate_v2_first_check.csv  ml_gate_v2_first_check.md  (+17 more)
configs/: pilot_gsm8k.yaml
data/: example.json  (+3 more)
(+681 files in other folders)
