[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lafc"
version = "0.1.0"
description = "Learning-Augmented Weighted Paging – Bansal, Coester, Kumar, Purohit, Vee (SODA 2022)"
requires-python = ">=3.9"
dependencies = ["pulp>=3.3.0", "numpy>=1.24", "scikit-learn>=1.3"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
