[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lafc"
version = "0.1.0"
description = "Learning-augmented caching research code: literature baselines, learned eviction policies, offline references, and reproducible experiment artifacts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["pulp>=3.3.0", "numpy>=1.24", "scikit-learn>=1.3"]
keywords = ["caching", "paging", "learning-augmented", "online-algorithms"]

[project.optional-dependencies]
dev = ["pytest>=7", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
